--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    compile 'com.google.firebase:firebase-database:12.0.1'
-    compile 'com.google.firebase:firebase-auth:12.0.1'
+    // Firebase Authentication
+    implementation 'com.google.firebase:firebase-auth:15.1.0'
+    implementation 'com.google.firebase:firebase-core:15.0.2'
+
     compile 'com.android.support:support-annotations:27.1.1'
 }
 
