--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     // Firebase Authentication
     implementation 'com.google.firebase:firebase-auth:15.1.0'
     implementation 'com.google.firebase:firebase-core:15.0.2'
+    compile 'com.google.firebase:firebase-database:15.0.1'
 
     compile 'com.android.support:support-annotations:27.1.1'
 }
