--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile 'com.firebaseui:firebase-ui-auth:3.1.0'
 
     compile 'com.android.support:support-annotations:27.1.1'
+    implementation 'com.google.code.gson:gson:2.8.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
